# Personal_Research-Assistant

./: .env  pyproject.toml
backend/: main.py
backend/utils/: extraction.py  summarize.py
backend/utils/common/: sitemap.py
frontend/: app.py
