[project]
name = "personal-research-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docker>=7.1.0",
    "docling>=2.43.0",
    "fastapi>=0.116.1",
    "google>=3.0.0",
    "langchain>=0.3.27",
    "requests>=2.32.4",
    "streamlit>=1.47.1",
    "uvicorn>=0.35.0",
]

[tool.uv.workspace]
members = [
    "backend",
    "frontend",
]
